# AVO2

./: .bazelignore  .bazelrc  .bazelversion.license  .buildifier.json.license  .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  .zenodo.json  .zenodo.json.license  AVO.pc.in  AVOConfig.cmake.in  BUILD  BUILD.bazel  Brewfile  CITATION.cff  CMakeLists.txt  CMakePresets.json.license  CPPLINT.cfg  CTestConfig.cmake  Dockerfile  MODULE.bazel  QUALITY_DECLARATION.md  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  appveyor.yml  compose.yaml  include-what-you-use.imp.license  package.xml  renovate.json.license  requirements.txt  triggers
.circleci/: config.yml
.devcontainer/: devcontainer.json  devcontainer.json.license
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.reuse/: dep5
cmake/modules/: CheckCXXLinkerFlag.cmake
doc/: CMakeLists.txt  Doxyfile.in  footer.html  footer.html.license  header.html  header.html.license  stylesheet.css
examples/: BUILD  BUILD.bazel  CMakeLists.txt  Circle.cc
src/: AVO.h  Agent.cc  Agent.h  BUILD  BUILD.bazel  CMakeLists.txt  Export.cc  KdTree.cc  KdTree.h  Line.cc  Line.h  Simulator.cc  Simulator.h  Vector2.cc  Vector2.h
